# XFFS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  test_script.txt
docs/: design.md  journal.md  spec.md
include/xffs/: allocator.hpp  bitmap.hpp  dir.hpp  dirent.hpp  disk.hpp  file_ops.hpp  inode.hpp  inode_io.hpp  path.hpp  superblock.hpp  utils.hpp
scripts/: create_disk.ps1
src/: allocator.cpp  dir.cpp  disk.cpp  file_ops.cpp  format.cpp  inode_io.cpp  main.cpp  path.cpp  shell.cpp
tests/: format_test.cpp
tools/: mkxffs.cpp
